[JBMICROCONT-57] - Treat something that looks like a jar as a normal file if it cannot be opened as a jar. Also fixed a remaining trailing / problem.
git-svn-id: https://svn.jboss.org/repos/jbossas/projects/microcontainer/trunk/container@56609 84be2c1e-ba19-0410-b317-a758671a6fc1